fixed sizing and spacing of skills

--- a/styles.css
+++ b/styles.css
@@ -676,7 +676,7 @@ transition: transform 0.3s ease;
     margin-left: 40%;
     color: #e59f1f;
     font-family: "Modak", system-ui;
-    font-size: 135px;
+    font-size: 145px;
 }
 
 #index_skillsTitle_Skills {
@@ -685,7 +685,7 @@ transition: transform 0.3s ease;
     margin-bottom: 1%;
     color: rgb(43, 42, 47);
     font-family: "Modak", system-ui;
-    font-size: 135px;
+    font-size: 145px;
 }
 
 #index_skills {
@@ -697,14 +697,14 @@ transition: transform 0.3s ease;
     display: flex;
     justify-content: center;
     align-items: flex-end;
-    height: 300px; 
+    height: 325px; 
 }
   .slick-slide {
     display: flex;
     justify-content: center;
   }
   .slick-slide img {
-    width: 125px;
+    width: 145px;
   }
 
 .skills-carousel p {
@@ -717,7 +717,7 @@ transition: transform 0.3s ease;
     vertical-align: middle;
     margin-top: 15%;
     padding: 15px;
-    width: 43%;
+    width: 50%;
     background-color: #f0b341b9;
     border-radius: 10px;
 }
